HW06 after review1